--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Delivery Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+        </style> 
 </head>
 <body>
+<nav class="navbar">
+    <div class="logo">
+        <img src="images/logo-images/main logo.png" alt="Khana-peena.com">
+    </div>
+
+    <ul>
+        <li class="items"><a href="#">Home</a></li>
+        <li class="items"><a href="#">Services</a></li>
+        <li class="items"><a href="#">About-Us</a></li>
+        <li class="items"><a href="#">Contact</a></li>
+    </ul>
+</nav>
     
 </body>
 </html>
