added Some more styling to navbar and added information about our website

--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Delivery Website</title>
     <link rel="stylesheet" href="CSS/style.css">
-
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-        </style> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Mukta:wght@300&family=Roboto:wght@300&family=Rubik:ital,wght@1,300&display=swap" rel="stylesheet"> 
 </head>
-<body>
-<nav class="navbar">
-    <div class="logo">
-        <img src="images/logo-images/main logo.png" alt="Khana-peena.com">
-    </div>
 
-    <ul>
-        <li class="items"><a href="#">Home</a></li>
-        <li class="items"><a href="#">Services</a></li>
-        <li class="items"><a href="#">About-Us</a></li>
-        <li class="items"><a href="#">Contact</a></li>
-    </ul>
-</nav>
-    
+<body>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="images/logo-images/main logo.png" alt="Khana-peena.com">
+        </div>
+
+        <ul>
+            <li class="items"><a href="#">Home</a></li>
+            <li class="items"><a href="#">Services</a></li>
+            <li class="items"><a href="#">About-Us</a></li>
+            <li class="items"><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section class="home">
+        <h1 class="p-heading">Welcome to FoodE.com</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea nam velit quos reprehenderit nisi quisquam illo
+            voluptas eos dignissimos quis iusto vero sapiente nesciunt asperiores eveniet in laborum, mollitia voluptate
+            quas incidunt nemo blanditiis, repellat modi! Molestiae perspiciatis, sed quaerat aspernatur </p>
+        <button class="button">Order Now</button>
+
+    </section>
 </body>
+
 </html>
