Added some more stylings and designed services section of the Website

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <title>Food Delivery Website</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&family=Mukta:wght@300&family=Roboto:wght@300&family=Rubik:ital,wght@1,300&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Arimo:wght@500&family=Chakra+Petch:wght@500&family=EB+Garamond&family=Mukta:wght@300&family=Roboto:wght@300&family=Rubik:ital,wght@1,300&display=swap" rel="stylesheet">
+      
 </head>
 
 <body>
@@ -33,6 +40,27 @@
             quas incidunt nemo blanditiis, repellat modi! Molestiae perspiciatis, sed quaerat aspernatur </p>
         <button class="button">Order Now</button>
 
+    </section>
+
+    <section id="service-container">
+        <h1 class="p-heading1 center">Our services</h1>
+        <div class="services">
+            <div class="box">
+                <img src="images/Card-plate images/Pizza img.jpg" alt="" srcset="">
+                <h2 class="s-heading center">Food ordering</h2>
+                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, optio voluptatem hic odit ratione vel sequi minus magni itaque ipsam. Facere repellat itaque adipisci aperiam obcaecati magni recusandae rerum quae labore hic perferendis porro numquam amet minima tenetur, aliquam fuga  </p>
+            </div>
+            <div class="box">
+                <img src="images/Card-plate images/italian dish img.jpg" alt="" srcset="">
+                <h2 class="s-heading center">Catering</h2>
+                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, optio voluptatem hic odit ratione vel sequi minus magni itaque ipsam. Facere repellat itaque adipisci aperiam obcaecati magni recusandae rerum quae labore hic perferendis porro numquam amet minima tenetur,   </p>
+            </div>
+            <div class="box">
+                <img src="images/Card-plate images/Delivery-boy img.jpg" alt="" srcset="">
+                <h2 class="s-heading center">Bulk ordering</h2>
+                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, optio voluptatem hic odit ratione vel sequi minus magni itaque ipsam. Facere repellat itaque adipisci aperiam obcaecati magni recusandae rerum quae labore hic perferendis porro numquam amet minima tenetur,   </p>
+            </div>
+        </div>
     </section>
 </body>
 
