--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <!-- navigation bar and intro section -->
     <nav class="navbar">
         <div class="logo">
             <img src="images/logo-images/main logo.png" alt="Khana-peena.com">
@@ -41,7 +42,7 @@
         <button class="button">Order Now</button>
 
     </section>
-
+    <!-- services Section -->
     <section id="service-container">
         <h1 class="p-heading1 center">Our services</h1>
         <div class="services">
@@ -62,6 +63,26 @@
             </div>
         </div>
     </section>
+    <!-- client section -->
+    <section class="clients-section">
+        <h1 class="p-heading1 center">Our clients</h1>
+        <div class="clients">
+            <div class="client-item">
+                <img src="images/logo-images/comp-logo1.png" alt="client">
+            </div>
+            <div class="client-item">
+                <img src="images/logo-images/comp-logo2 google.png" alt="client">
+            </div>
+            <div class="client-item">
+                <img src="images/logo-images/comp-logo3 twitter.png" alt="client">
+            </div>
+            <div class="client-item">
+                <img src="images/logo-images/comp-logo4 insta.png" alt="client">
+            </div>
+        </div>
+    </section>
+
+    
 </body>
 
 </html>
