Created and designed contact-us and footer section of the website

--- a/index.html
+++ b/index.html
@@ -82,7 +82,39 @@
         </div>
     </section>
 
-    
+    <!-- contact us section -->
+    <section id="contact">
+        <h1 class="p-heading2 center">Contact Us</h1>
+        <div class="contact-box">
+            <form action="">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" name="name" id="name" placeholder="enter your name">
+                </div>
+                <div class="form-group">
+                    <label for="name">Email:</label>
+                    <input type="email" name="name" id="name" placeholder="enter your name">
+                </div>
+                <div class="form-group">
+                    <label for="name">Phone:</label>
+                    <input type="phone" name="name" id="name" placeholder="enter your name">
+                </div>
+                <div class="form-group">
+                    <label for="name">Message:</label>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter Message"></textarea>
+
+                </div>
+            </form>
+            <button class="send">send</button>
+        </div>
+    </section>
+
+    <!-- footer section -->
+    <footer>
+        <div class="center">
+            copyright &copy; www.FoodE.com all rights reserved
+        </div>
+    </footer>
 </body>
 
 </html>
